Body overflow fix

--- a/src/framework7.3dpanels.less
+++ b/src/framework7.3dpanels.less
@@ -2,6 +2,7 @@ body {
     -webkit-perspective: 1100px;
     -moz-perspective: 1100px;
     perspective: 1100px;
+    overflow: hidden;
 }
 .views {
     -webkit-transform-style: preserve-3d;
